# jtf_project

./: .gitignore  README.md  optcg_dashboard.twb  pyproject.toml  tableau_sample.csv
jtf_optcg/: dbt_project.yml  profiles.yml
jtf_optcg/macros/: finish_place.sql  str_null.sql
jtf_optcg/models/mart/: mart_decklists.sql  mart_decklists.yaml
jtf_optcg/models/prep/: prep_decklists.sql  prep_decklists.yaml  prep_leaders.sql  prep_leaders.yaml
jtf_optcg/models/raw/: sources.yml
jtf_optcg/models/stg/: stg_decklists.sql  stg_decklists.yaml  stg_leaders.sql  stg_leaders.yaml
orch/: definitions.py
orch/assets/: dbt_assets.py  ingestion_assets.py
orch/jobs/: jobs.py
setup/: bigquery_ingest.py  deck_urls.csv  decklists.csv  duckdb_ingest.py  leaders.csv  main.tf  my_credentials.json  scrape_deck_urls.py  scrape_decklists.py  scrape_leaders.py  terraform_infra.py  variables.tf
